refactor(runtime-alerts): Add user-alert feed seam
Introduce a runtime-owned alert feed seam so runtime.alerts no longer depends directly on clients.fcp classes.

Add runtime-owned feed event and subscriber types, move FCP feed encoding and subscription adaptation into runtime.endpoints.fcp, and update alert implementations, manager wiring, and tests to use the new seam.

Also expand focused bridge coverage and enrich Javadocs for the newly added seam and bridge types.